# sb

./: .gitignore  .lsy-run.out  .lsy-transcript  .sb_ouch_probe.txt  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE  README.md  dist-workspace.toml  install.sh  lsy  pimp-my-sb.sh  sb  sb-design-principles.md
.github/: copilot-instructions.md
.github/prompts/: add-keybinding.prompt.md
.github/workflows/: ci.yml  publish-crates-io.yml  release.yml
assets/: catppuccin.ini  gruvbox.ini  midnight-commander.ini
assets/skins/: bubblegum-pop.ini  coral-reef.ini  cyberpunk-neon.ini  synthwave.ini
docs/: CNAME  controls.html  index.html  install.html  screenshots.html  script.js  style.css
examples/plugins/: cdlog.lua  duh.lua  git-commit.lua  linecount.lua  touch-notify.lua
images/: .sb
skins/: nord.ini  tokyo-night.ini
src/: app_ai.rs  app_archive.rs  app_core.rs  app_download.rs  app_entry_iter.rs  app_files.rs  app_git.rs  app_images.rs  app_init.rs  app_input.rs  app_meta.rs  app_model.rs  app_modes.rs  app_mouse.rs  app_notes.rs  app_organize.rs  app_plugins.rs  app_preview.rs  app_remote.rs  app_render_cache.rs  app_rendering.rs  app_search.rs  app_shell.rs  app_shortcuts.rs  app_sizes.rs  app_sort.rs  app_sqlite.rs  app_transfer.rs  app_video.rs  main.rs
src/integration/: app.rs  catalog.rs  probe.rs
src/plugin/: api.rs  discovery.rs  effects.rs  mod.rs  preview.rs  prompt.rs  runtime.rs
src/run/: key_dispatch.rs  mod.rs  render_footer.rs  render_header.rs  render_overlays.rs  render_overlays_secondary.rs  render_scrollbar.rs  render_table.rs  render_types.rs  render_util.rs  run_loop_body.rs
src/ui/: ansi.rs  cli.rs  dialogs.rs  icons.rs  list_metrics.rs  mod.rs  modal.rs  palette.rs  (+9 more)
tests/: no_orphan_modules.rs
(+15 files in other folders)
