[package]
name = "shell-buddy"
version = "0.8.2"
edition = "2024"
description = "Shell Buddy (sb)"
repository = "https://github.com/hjelev/sb"
homepage = "https://github.com/hjelev/sb"
keywords = ["terminal", "file-manager", "tui", "preview", "images"]
categories = ["command-line-utilities", "filesystem"]
license = "MIT"

[dependencies]
clap = { version = "4.6.0", features = ["derive"] }
ratatui = "0.26"
crossterm = "0.27"
chrono = "0.4"
devicons = "0.1"
hostname = "0.4"
users = "0.11"
regex = "1"
rayon = "1"
unicode-width = "0.2"
base64 = "0.22"
image = { version = "0.25", default-features = false, features = ["gif", "ico", "jpeg", "png", "webp"] }
icy_sixel = "0.5"

[dev-dependencies]
tempfile = "3"

[lints.rust]
# Catch unused/dead items at build time so half-finished refactors don't rot
# silently (modules that fall out of the `mod` tree, abandoned helpers, etc.).
dead_code = "warn"
unused_imports = "warn"

[lints.clippy]
# Opt into Clippy's standard suite as warnings (priority -1 so individual
# lints below can override it).
all = { level = "warn", priority = -1 }

[profile.release]
opt-level = 3       # Optimize for speed — see https://doc.rust-lang.org/cargo/reference/profiles.html#opt-level
lto = true          # Enable Link Time Optimization (huge help)
codegen-units = 1   # Reduces parallel builds to allow better optimization
panic = 'abort'     # Removes stack unwinding code (saves space)
strip = true        # Automatically removes debug symbols (the biggest saver!)

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[[bin]]
name = "sb"
path = "src/main.rs"

[workspace]


